# serializer version: 1
# name: TestAddIsolate.test_default[True-False]
  'https://virtool.example.com/otus/6116cba1/isolates/9pf'
# ---
# name: TestAddIsolate.test_default[True-False].1
  dict({
    'default': False,
    'id': '9pf',
    'sequences': list([
    ]),
    'source_name': 'b',
    'source_type': 'isolate',
  })
# ---
# name: TestAddIsolate.test_default[True-False].2
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': False,
        'id': '9pf',
        'source_name': 'b',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestAddIsolate.test_default[True-False].3
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate b',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': False,
              'id': '9pf',
              'sequences': list([
              ]),
              'source_name': 'b',
              'source_type': 'isolate',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestAddIsolate.test_default[True-True]
  'https://virtool.example.com/otus/6116cba1/isolates/9pf'
# ---
# name: TestAddIsolate.test_default[True-True].1
  dict({
    'default': True,
    'id': '9pf',
    'sequences': list([
    ]),
    'source_name': 'b',
    'source_type': 'isolate',
  })
# ---
# name: TestAddIsolate.test_default[True-True].2
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': True,
        'id': '9pf',
        'source_name': 'b',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestAddIsolate.test_default[True-True].3
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate b as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'default',
        ]),
        list([
          True,
          False,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': True,
              'id': '9pf',
              'sequences': list([
              ]),
              'source_name': 'b',
              'source_type': 'isolate',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestAddIsolate.test_first[True]
  'https://virtool.example.com/otus/6116cba1/isolates/9pf'
# ---
# name: TestAddIsolate.test_first[True].1
  dict({
    'default': True,
    'id': '9pf',
    'sequences': list([
    ]),
    'source_name': 'b',
    'source_type': 'isolate',
  })
# ---
# name: TestAddIsolate.test_first[True].2
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': '9pf',
        'source_name': 'b',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestAddIsolate.test_first[True].3
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate b as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            0,
            dict({
              'default': True,
              'id': '9pf',
              'sequences': list([
              ]),
              'source_name': 'b',
              'source_type': 'isolate',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestAddIsolate.test_force_case[True]
  'https://virtool.example.com/otus/6116cba1/isolates/9pf'
# ---
# name: TestAddIsolate.test_force_case[True].1
  dict({
    'default': False,
    'id': '9pf',
    'sequences': list([
    ]),
    'source_name': 'Beta',
    'source_type': 'isolate',
  })
# ---
# name: TestAddIsolate.test_force_case[True].2
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': False,
        'id': '9pf',
        'source_name': 'Beta',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestAddIsolate.test_force_case[True].3
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate Beta',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': False,
              'id': '9pf',
              'sequences': list([
              ]),
              'source_name': 'Beta',
              'source_type': 'isolate',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestEdit.test[True-data0-TMV-Changed name to Tobacco mosaic otu]
  dict({
    'abbreviation': 'TMV',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': dict({
      'empty_isolate': list([
        'cab8b360',
      ]),
      'empty_otu': False,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Changed name to Tobacco mosaic otu and changed abbreviation to TMV and modified schema',
      'id': '6116cba1.1',
      'method_name': 'edit',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
    }),
    'name': 'Tobacco mosaic otu',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data0-TMV-Changed name to Tobacco mosaic otu].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'TMV',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'tobacco mosaic otu',
    'name': 'Tobacco mosaic otu',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data0-TMV-Changed name to Tobacco mosaic otu].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Changed name to Tobacco mosaic otu and changed abbreviation to TMV and modified schema',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        'lower_name',
        list([
          'prunus virus f',
          'tobacco mosaic otu',
        ]),
      ]),
      list([
        'change',
        'name',
        list([
          'Prunus virus F',
          'Tobacco mosaic otu',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestEdit.test[True-data1-PVF-Changed name to Tobacco mosaic otu and changed abbreviation to TMV]
  dict({
    'abbreviation': 'TMV',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': dict({
      'empty_isolate': list([
        'cab8b360',
      ]),
      'empty_otu': False,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Changed name to Tobacco mosaic otu and changed abbreviation to TMV and modified schema',
      'id': '6116cba1.1',
      'method_name': 'edit',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
    }),
    'name': 'Tobacco mosaic otu',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data1-PVF-Changed name to Tobacco mosaic otu and changed abbreviation to TMV].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'TMV',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'tobacco mosaic otu',
    'name': 'Tobacco mosaic otu',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data1-PVF-Changed name to Tobacco mosaic otu and changed abbreviation to TMV].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Changed name to Tobacco mosaic otu and changed abbreviation to TMV and modified schema',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        'abbreviation',
        list([
          'PVF',
          'TMV',
        ]),
      ]),
      list([
        'change',
        'lower_name',
        list([
          'prunus virus f',
          'tobacco mosaic otu',
        ]),
      ]),
      list([
        'change',
        'name',
        list([
          'Prunus virus F',
          'Tobacco mosaic otu',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestEdit.test[True-data2-PVF-Changed abbreviation to TMV]
  dict({
    'abbreviation': 'TMV',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': dict({
      'empty_isolate': list([
        'cab8b360',
      ]),
      'empty_otu': False,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Changed name to Prunus virus F and changed abbreviation to TMV and modified schema',
      'id': '6116cba1.1',
      'method_name': 'edit',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
    }),
    'name': 'Prunus virus F',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data2-PVF-Changed abbreviation to TMV].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'TMV',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data2-PVF-Changed abbreviation to TMV].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Changed name to Prunus virus F and changed abbreviation to TMV and modified schema',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        'abbreviation',
        list([
          'PVF',
          'TMV',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestEdit.test[True-data3-TMV-Changed name to Tobacco mosaic otu]
  dict({
    'abbreviation': 'TMV',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': dict({
      'empty_isolate': list([
        'cab8b360',
      ]),
      'empty_otu': False,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Changed name to Tobacco mosaic otu and changed abbreviation to TMV and modified schema',
      'id': '6116cba1.1',
      'method_name': 'edit',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
    }),
    'name': 'Tobacco mosaic otu',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data3-TMV-Changed name to Tobacco mosaic otu].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'TMV',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'tobacco mosaic otu',
    'name': 'Tobacco mosaic otu',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data3-TMV-Changed name to Tobacco mosaic otu].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Changed name to Tobacco mosaic otu and changed abbreviation to TMV and modified schema',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        'lower_name',
        list([
          'prunus virus f',
          'tobacco mosaic otu',
        ]),
      ]),
      list([
        'change',
        'name',
        list([
          'Prunus virus F',
          'Tobacco mosaic otu',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestEdit.test[True-data4-TMV-Changed name to Tobacco mosaic otu and removed abbreviation TMV]
  dict({
    'abbreviation': '',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': dict({
      'empty_isolate': list([
        'cab8b360',
      ]),
      'empty_otu': False,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Changed name to Tobacco mosaic otu and removed abbreviation TMV and modified schema',
      'id': '6116cba1.1',
      'method_name': 'edit',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
    }),
    'name': 'Tobacco mosaic otu',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data4-TMV-Changed name to Tobacco mosaic otu and removed abbreviation TMV].1
  dict({
    '_id': '6116cba1',
    'abbreviation': '',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'tobacco mosaic otu',
    'name': 'Tobacco mosaic otu',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data4-TMV-Changed name to Tobacco mosaic otu and removed abbreviation TMV].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Changed name to Tobacco mosaic otu and removed abbreviation TMV and modified schema',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        'abbreviation',
        list([
          'TMV',
          '',
        ]),
      ]),
      list([
        'change',
        'lower_name',
        list([
          'prunus virus f',
          'tobacco mosaic otu',
        ]),
      ]),
      list([
        'change',
        'name',
        list([
          'Prunus virus F',
          'Tobacco mosaic otu',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestEdit.test[True-data5--Changed name to Tobacco mosaic otu and added abbreviation TMV]
  dict({
    'abbreviation': 'TMV',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': dict({
      'empty_isolate': list([
        'cab8b360',
      ]),
      'empty_otu': False,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Changed name to Tobacco mosaic otu and added abbreviation TMV and modified schema',
      'id': '6116cba1.1',
      'method_name': 'edit',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
    }),
    'name': 'Tobacco mosaic otu',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data5--Changed name to Tobacco mosaic otu and added abbreviation TMV].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'TMV',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'tobacco mosaic otu',
    'name': 'Tobacco mosaic otu',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data5--Changed name to Tobacco mosaic otu and added abbreviation TMV].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Changed name to Tobacco mosaic otu and added abbreviation TMV and modified schema',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        'abbreviation',
        list([
          '',
          'TMV',
        ]),
      ]),
      list([
        'change',
        'lower_name',
        list([
          'prunus virus f',
          'tobacco mosaic otu',
        ]),
      ]),
      list([
        'change',
        'name',
        list([
          'Prunus virus F',
          'Tobacco mosaic otu',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestEdit.test[True-data6-PVF-Changed abbreviation to TMV]
  dict({
    'abbreviation': 'TMV',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': dict({
      'empty_isolate': list([
        'cab8b360',
      ]),
      'empty_otu': False,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Changed name to Prunus virus F and changed abbreviation to TMV and modified schema',
      'id': '6116cba1.1',
      'method_name': 'edit',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
    }),
    'name': 'Prunus virus F',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data6-PVF-Changed abbreviation to TMV].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'TMV',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data6-PVF-Changed abbreviation to TMV].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Changed name to Prunus virus F and changed abbreviation to TMV and modified schema',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        'abbreviation',
        list([
          'PVF',
          'TMV',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestEdit.test[True-data7-PVF-Changed abbreviation to TMV]
  dict({
    'abbreviation': 'TMV',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': dict({
      'empty_isolate': list([
        'cab8b360',
      ]),
      'empty_otu': False,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Changed name to Prunus virus F and changed abbreviation to TMV and modified schema',
      'id': '6116cba1.1',
      'method_name': 'edit',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
    }),
    'name': 'Prunus virus F',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data7-PVF-Changed abbreviation to TMV].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'TMV',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data7-PVF-Changed abbreviation to TMV].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Changed name to Prunus virus F and changed abbreviation to TMV and modified schema',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        'abbreviation',
        list([
          'PVF',
          'TMV',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestEdit.test[True-data8--Added abbreviation TMV]
  dict({
    'abbreviation': 'TMV',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': dict({
      'empty_isolate': list([
        'cab8b360',
      ]),
      'empty_otu': False,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Changed name to Prunus virus F and added abbreviation TMV and modified schema',
      'id': '6116cba1.1',
      'method_name': 'edit',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
    }),
    'name': 'Prunus virus F',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data8--Added abbreviation TMV].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'TMV',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data8--Added abbreviation TMV].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Changed name to Prunus virus F and added abbreviation TMV and modified schema',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        'abbreviation',
        list([
          '',
          'TMV',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestEdit.test[True-data9-TMV-Removed abbreviation TMV]
  dict({
    'abbreviation': '',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': dict({
      'empty_isolate': list([
        'cab8b360',
      ]),
      'empty_otu': False,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Changed name to Prunus virus F and removed abbreviation TMV and modified schema',
      'id': '6116cba1.1',
      'method_name': 'edit',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
    }),
    'name': 'Prunus virus F',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data9-TMV-Removed abbreviation TMV].1
  dict({
    '_id': '6116cba1',
    'abbreviation': '',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestEdit.test[True-data9-TMV-Removed abbreviation TMV].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Changed name to Prunus virus F and removed abbreviation TMV and modified schema',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        'abbreviation',
        list([
          'TMV',
          '',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestEdit.test_no_change[True-0-data0][json]
  dict({
    'abbreviation': 'PVF',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
          dict({
            'accession': 'KX269872',
            'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
            'host': 'sweet cherry',
            'id': 'abcd1234',
            'remote': None,
            'segment': None,
            'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
            'target': None,
          }),
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': None,
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Edited Prunus virus E',
      'id': '6116cba1.0',
      'method_name': 'edit',
      'user': dict({
        'handle': 'leeashley',
        'id': 'fb085f7f',
      }),
    }),
    'name': 'Prunus virus F',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 0,
  })
# ---
# name: TestEdit.test_no_change[True-0-data1][json]
  dict({
    'abbreviation': 'PVF',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
          dict({
            'accession': 'KX269872',
            'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
            'host': 'sweet cherry',
            'id': 'abcd1234',
            'remote': None,
            'segment': None,
            'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
            'target': None,
          }),
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': None,
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Edited Prunus virus E',
      'id': '6116cba1.0',
      'method_name': 'edit',
      'user': dict({
        'handle': 'leeashley',
        'id': 'fb085f7f',
      }),
    }),
    'name': 'Prunus virus F',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 0,
  })
# ---
# name: TestEdit.test_no_change[True-1-data2][json]
  dict({
    'abbreviation': 'PVF2',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
          dict({
            'accession': 'KX269872',
            'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
            'host': 'sweet cherry',
            'id': 'abcd1234',
            'remote': None,
            'segment': None,
            'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
            'target': None,
          }),
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': None,
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Edited Prunus virus E',
      'id': '6116cba1.0',
      'method_name': 'edit',
      'user': dict({
        'handle': 'leeashley',
        'id': 'fb085f7f',
      }),
    }),
    'name': 'Prunus virus F',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': True,
    'version': 1,
  })
# ---
# name: TestEdit.test_no_change[True-1-data3][json]
  dict({
    'abbreviation': 'PVF',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
          dict({
            'accession': 'KX269872',
            'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
            'host': 'sweet cherry',
            'id': 'abcd1234',
            'remote': None,
            'segment': None,
            'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
            'target': None,
          }),
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': None,
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Edited Prunus virus E',
      'id': '6116cba1.0',
      'method_name': 'edit',
      'user': dict({
        'handle': 'leeashley',
        'id': 'fb085f7f',
      }),
    }),
    'name': 'Prunus virus G',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': True,
    'version': 1,
  })
# ---
# name: TestRemoveIsolate.test[True]
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Removed Isolate 8816-v2',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'remove',
        'isolates',
        list([
          list([
            0,
            dict({
              'default': True,
              'id': 'cab8b360',
              'sequences': list([
                dict({
                  '_id': 'abcd1234',
                  'accession': 'KX269872',
                  'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
                  'host': 'sweet cherry',
                  'isolate_id': 'cab8b360',
                  'otu_id': '6116cba1',
                  'reference': dict({
                    'id': 'ref',
                  }),
                  'remote': None,
                  'segment': None,
                  'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
                }),
              ]),
              'source_name': '8816-v2',
              'source_type': 'isolate',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'remove_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestRemoveIsolate.test_change_default[True]
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'bcb9b352',
        'source_name': '7865',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestRemoveIsolate.test_change_default[True].1
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Removed Isolate 8816-v2 and set Isolate 7865 as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'id',
        ]),
        list([
          'cab8b360',
          'bcb9b352',
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'source_name',
        ]),
        list([
          '8816-v2',
          '7865',
        ]),
      ]),
      list([
        'remove',
        list([
          'isolates',
          0,
          'sequences',
        ]),
        list([
          list([
            0,
            dict({
              '_id': 'abcd1234',
              'accession': 'KX269872',
              'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
              'host': 'sweet cherry',
              'isolate_id': 'cab8b360',
              'otu_id': '6116cba1',
              'reference': dict({
                'id': 'ref',
              }),
              'remote': None,
              'segment': None,
              'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
            }),
          ]),
        ]),
      ]),
      list([
        'remove',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': False,
              'id': 'bcb9b352',
              'sequences': list([
              ]),
              'source_name': '7865',
              'source_type': 'isolate',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'remove_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestSetAsDefault.test[True]
  dict({
    'default': True,
    'id': 'test',
    'sequences': list([
    ]),
    'source_name': 'b',
    'source_type': 'isolate',
  })
# ---
# name: TestSetAsDefault.test[True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': False,
        'id': 'cab8b360',
        'sequences': list([
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': True,
        'id': 'test',
        'sequences': list([
        ]),
        'source_name': 'b',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestSetAsDefault.test[True].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Set Isolate b as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'default',
        ]),
        list([
          True,
          False,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          1,
          'default',
        ]),
        list([
          False,
          True,
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'set_as_default',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestSetAsDefault.test_no_change[True]
  dict({
    'default': True,
    'id': 'cab8b360',
    'sequences': list([
    ]),
    'source_name': '8816-v2',
    'source_type': 'isolate',
  })
# ---
# name: TestSetAsDefault.test_no_change[True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': False,
        'id': 'test',
        'sequences': list([
        ]),
        'source_name': 'b',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 0,
  })
# ---
# name: TestUpdateIsolate.test[True-data0-Renamed Isolate b to Variant b]
  dict({
    'default': False,
    'id': 'test',
    'sequences': list([
    ]),
    'source_name': 'b',
    'source_type': 'variant',
  })
# ---
# name: TestUpdateIsolate.test[True-data0-Renamed Isolate b to Variant b].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': False,
        'id': 'test',
        'source_name': 'b',
        'source_type': 'variant',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestUpdateIsolate.test[True-data0-Renamed Isolate b to Variant b].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Renamed Isolate b to Variant b',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          1,
          'source_type',
        ]),
        list([
          'isolate',
          'variant',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestUpdateIsolate.test[True-data1-Renamed Isolate b to Variant b]
  dict({
    'default': False,
    'id': 'test',
    'sequences': list([
    ]),
    'source_name': 'b',
    'source_type': 'variant',
  })
# ---
# name: TestUpdateIsolate.test[True-data1-Renamed Isolate b to Variant b].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': False,
        'id': 'test',
        'source_name': 'b',
        'source_type': 'variant',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestUpdateIsolate.test[True-data1-Renamed Isolate b to Variant b].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Renamed Isolate b to Variant b',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          1,
          'source_type',
        ]),
        list([
          'isolate',
          'variant',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestUpdateIsolate.test[True-data2-Renamed Isolate b to Variant A]
  dict({
    'default': False,
    'id': 'test',
    'sequences': list([
    ]),
    'source_name': 'A',
    'source_type': 'variant',
  })
# ---
# name: TestUpdateIsolate.test[True-data2-Renamed Isolate b to Variant A].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': False,
        'id': 'test',
        'source_name': 'A',
        'source_type': 'variant',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestUpdateIsolate.test[True-data2-Renamed Isolate b to Variant A].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Renamed Isolate b to Variant A',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          1,
          'source_name',
        ]),
        list([
          'b',
          'A',
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          1,
          'source_type',
        ]),
        list([
          'isolate',
          'variant',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestUpdateIsolate.test[True-data3-Renamed Isolate b to Isolate A]
  dict({
    'default': False,
    'id': 'test',
    'sequences': list([
    ]),
    'source_name': 'A',
    'source_type': 'isolate',
  })
# ---
# name: TestUpdateIsolate.test[True-data3-Renamed Isolate b to Isolate A].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': False,
        'id': 'test',
        'source_name': 'A',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestUpdateIsolate.test[True-data3-Renamed Isolate b to Isolate A].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Renamed Isolate b to Isolate A',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          1,
          'source_name',
        ]),
        list([
          'b',
          'A',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestUpdateIsolate.test_force_case[True]
  dict({
    'default': True,
    'id': 'cab8b360',
    'sequences': list([
    ]),
    'source_name': '8816-v2',
    'source_type': 'variant',
  })
# ---
# name: TestUpdateIsolate.test_force_case[True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'variant',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: TestUpdateIsolate.test_force_case[True].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Renamed Isolate 8816-v2 to Variant 8816-v2',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'source_type',
        ]),
        list([
          'isolate',
          'variant',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_create_sequence[True-None-null]
  'https://virtool.example.com/otus/6116cba1/isolates/cab8b360/sequences/bf1b993c'
# ---
# name: test_create_sequence[True-None-null].1
  dict({
    'accession': 'foobar',
    'definition': 'A made up sequence',
    'host': 'Plant',
    'id': 'bf1b993c',
    'isolate_id': 'cab8b360',
    'otu_id': '6116cba1',
    'reference': dict({
      'id': 'hxn167',
    }),
    'segment': None,
    'sequence': 'ATGCGTGTACTG',
    'target': None,
  })
# ---
# name: test_create_sequence[True-None-null][db]
  list([
    dict({
      '_id': 'bf1b993c',
      'accession': 'foobar',
      'definition': 'A made up sequence',
      'host': 'Plant',
      'isolate_id': 'cab8b360',
      'otu_id': '6116cba1',
      'reference': dict({
        'id': 'hxn167',
      }),
      'segment': None,
      'sequence': 'ATGCGTGTACTG',
      'target': None,
    }),
    dict({
      '_id': '6116cba1',
      'abbreviation': 'PVF',
      'isolates': list([
        dict({
          'default': True,
          'id': 'cab8b360',
          'source_name': '8816-v2',
          'source_type': 'isolate',
        }),
      ]),
      'last_indexed_version': 0,
      'lower_name': 'prunus virus f',
      'name': 'Prunus virus F',
      'reference': dict({
        'id': 'hxn167',
      }),
      'remote_id': None,
      'schema': list([
        dict({
          'molecule': 'ssDNA',
          'name': 'test_segment',
          'required': False,
        }),
      ]),
      'verified': True,
      'version': 2,
    }),
    dict({
      '_id': '6116cba1.2',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Created new sequence foobar in Isolate 8816-v2',
      'diff': list([
        list([
          'change',
          'version',
          list([
            1,
            2,
          ]),
        ]),
        list([
          'add',
          list([
            'isolates',
            0,
            'sequences',
          ]),
          list([
            list([
              0,
              dict({
                '_id': 'bf1b993c',
                'accession': 'foobar',
                'definition': 'A made up sequence',
                'host': 'Plant',
                'isolate_id': 'cab8b360',
                'otu_id': '6116cba1',
                'reference': dict({
                  'id': 'hxn167',
                }),
                'segment': None,
                'sequence': 'ATGCGTGTACTG',
                'target': None,
              }),
            ]),
          ]),
        ]),
        list([
          'change',
          'verified',
          list([
            False,
            True,
          ]),
        ]),
      ]),
      'index': dict({
        'id': 'unbuilt',
        'version': 'unbuilt',
      }),
      'method_name': 'create_sequence',
      'otu': dict({
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 2,
      }),
      'reference': dict({
        'id': 'hxn167',
      }),
      'user': dict({
        'id': 'bf1b993c',
      }),
    }),
  ])
# ---
# name: test_create_sequence[True-None-test_segment]
  'https://virtool.example.com/otus/6116cba1/isolates/cab8b360/sequences/bf1b993c'
# ---
# name: test_create_sequence[True-None-test_segment].1
  dict({
    'accession': 'foobar',
    'definition': 'A made up sequence',
    'host': 'Plant',
    'id': 'bf1b993c',
    'isolate_id': 'cab8b360',
    'otu_id': '6116cba1',
    'reference': dict({
      'id': 'hxn167',
    }),
    'segment': 'test_segment',
    'sequence': 'ATGCGTGTACTG',
    'target': None,
  })
# ---
# name: test_create_sequence[True-None-test_segment][db]
  list([
    dict({
      '_id': 'bf1b993c',
      'accession': 'foobar',
      'definition': 'A made up sequence',
      'host': 'Plant',
      'isolate_id': 'cab8b360',
      'otu_id': '6116cba1',
      'reference': dict({
        'id': 'hxn167',
      }),
      'segment': 'test_segment',
      'sequence': 'ATGCGTGTACTG',
      'target': None,
    }),
    dict({
      '_id': '6116cba1',
      'abbreviation': 'PVF',
      'isolates': list([
        dict({
          'default': True,
          'id': 'cab8b360',
          'source_name': '8816-v2',
          'source_type': 'isolate',
        }),
      ]),
      'last_indexed_version': 0,
      'lower_name': 'prunus virus f',
      'name': 'Prunus virus F',
      'reference': dict({
        'id': 'hxn167',
      }),
      'remote_id': None,
      'schema': list([
        dict({
          'molecule': 'ssDNA',
          'name': 'test_segment',
          'required': False,
        }),
      ]),
      'verified': True,
      'version': 2,
    }),
    dict({
      '_id': '6116cba1.2',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Created new sequence foobar in Isolate 8816-v2',
      'diff': list([
        list([
          'change',
          'version',
          list([
            1,
            2,
          ]),
        ]),
        list([
          'add',
          list([
            'isolates',
            0,
            'sequences',
          ]),
          list([
            list([
              0,
              dict({
                '_id': 'bf1b993c',
                'accession': 'foobar',
                'definition': 'A made up sequence',
                'host': 'Plant',
                'isolate_id': 'cab8b360',
                'otu_id': '6116cba1',
                'reference': dict({
                  'id': 'hxn167',
                }),
                'segment': 'test_segment',
                'sequence': 'ATGCGTGTACTG',
                'target': None,
              }),
            ]),
          ]),
        ]),
        list([
          'change',
          'verified',
          list([
            False,
            True,
          ]),
        ]),
      ]),
      'index': dict({
        'id': 'unbuilt',
        'version': 'unbuilt',
      }),
      'method_name': 'create_sequence',
      'otu': dict({
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 2,
      }),
      'reference': dict({
        'id': 'hxn167',
      }),
      'user': dict({
        'id': 'bf1b993c',
      }),
    }),
  ])
# ---
# name: test_edit_sequence[True-None-null]
  dict({
    'accession': 'KX269872',
    'definition': 'A made up sequence',
    'host': 'Grapevine',
    'id': 'abcd1234',
    'isolate_id': 'cab8b360',
    'otu_id': '6116cba1',
    'reference': dict({
      'id': 'ref',
    }),
    'remote': None,
    'segment': None,
    'sequence': 'ATGCGTGTACTG',
  })
# ---
# name: test_edit_sequence[True-None-null].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
      dict({
        'molecule': 'ssDNA',
        'name': 'test_segment',
        'required': False,
      }),
    ]),
    'verified': True,
    'version': 2,
  })
# ---
# name: test_edit_sequence[True-None-null].2
  None
# ---
# name: test_edit_sequence[True-None-null].3
  dict({
    '_id': '6116cba1.2',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Edited sequence abcd1234 in Isolate 8816-v2',
    'diff': list([
      list([
        'change',
        'version',
        list([
          1,
          2,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'sequences',
          0,
          'definition',
        ]),
        list([
          'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
          'A made up sequence',
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'sequences',
          0,
          'host',
        ]),
        list([
          'sweet cherry',
          'Grapevine',
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'sequences',
          0,
          'sequence',
        ]),
        list([
          'TGTTTAAGAGATTAAACAACCGCTTTC',
          'ATGCGTGTACTG',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit_sequence',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 2,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit_sequence[True-None-test_segment]
  dict({
    'accession': 'KX269872',
    'definition': 'A made up sequence',
    'host': 'Grapevine',
    'id': 'abcd1234',
    'isolate_id': 'cab8b360',
    'otu_id': '6116cba1',
    'reference': dict({
      'id': 'ref',
    }),
    'remote': None,
    'segment': 'test_segment',
    'sequence': 'ATGCGTGTACTG',
  })
# ---
# name: test_edit_sequence[True-None-test_segment].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
      dict({
        'molecule': 'ssDNA',
        'name': 'test_segment',
        'required': False,
      }),
    ]),
    'verified': True,
    'version': 2,
  })
# ---
# name: test_edit_sequence[True-None-test_segment].2
  None
# ---
# name: test_edit_sequence[True-None-test_segment].3
  dict({
    '_id': '6116cba1.2',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Edited sequence abcd1234 in Isolate 8816-v2',
    'diff': list([
      list([
        'change',
        'version',
        list([
          1,
          2,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'sequences',
          0,
          'definition',
        ]),
        list([
          'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
          'A made up sequence',
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'sequences',
          0,
          'host',
        ]),
        list([
          'sweet cherry',
          'Grapevine',
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'sequences',
          0,
          'sequence',
        ]),
        list([
          'TGTTTAAGAGATTAAACAACCGCTTTC',
          'ATGCGTGTACTG',
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'sequences',
          0,
          'segment',
        ]),
        list([
          None,
          'test_segment',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit_sequence',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 2,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_get[None]
  dict({
    'abbreviation': 'PVF',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
          dict({
            'accession': 'KX269872',
            'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
            'host': 'sweet cherry',
            'id': 'abcd1234',
            'remote': None,
            'segment': None,
            'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
            'target': None,
          }),
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': None,
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Edited Prunus virus E',
      'id': '6116cba1.1',
      'method_name': 'edit',
      'user': dict({
        'handle': 'leeashley',
        'id': 'fb085f7f',
      }),
    }),
    'name': 'Prunus virus F',
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 0,
  })
# ---
# name: test_get_isolate[None]
  dict({
    'default': True,
    'id': 'cab8b360',
    'sequences': list([
      dict({
        'accession': 'KX269872',
        'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
        'host': 'sweet cherry',
        'id': 'abcd1234',
        'reference': dict({
          'id': 'ref',
        }),
        'remote': None,
        'segment': None,
        'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
      }),
    ]),
    'source_name': '8816-v2',
    'source_type': 'isolate',
  })
# ---
# name: test_get_sequence[None]
  dict({
    'accession': 'KX269872',
    'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
    'host': 'sweet cherry',
    'id': 'abcd1234',
    'otu_id': '6116cba1',
    'reference': dict({
      'data_type': 'genome',
      'id': 'ref',
      'name': 'Reference A',
    }),
    'remote': None,
    'segment': None,
    'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
    'target': None,
  })
# ---
# name: test_list_isolates[None]
  list([
    dict({
      'default': True,
      'id': 'cab8b360',
      'sequences': list([
      ]),
      'source_name': '8816-v2',
      'source_type': 'isolate',
    }),
    dict({
      'default': False,
      'id': 'bcb9b352',
      'sequences': list([
      ]),
      'source_name': '7865',
      'source_type': 'isolate',
    }),
  ])
# ---
# name: test_list_sequences[None]
  list([
    dict({
      'accession': 'KX269872',
      'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
      'host': 'sweet cherry',
      'id': 'abcd1234',
      'remote': None,
      'segment': None,
      'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
      'target': None,
    }),
  ])
# ---
# name: test_remove[True--True]
  dict({
    '_id': '6116cba1.removed',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Removed Prunus virus F',
    'diff': dict({
      '_id': '6116cba1',
      'abbreviation': '',
      'isolates': list([
        dict({
          'default': True,
          'id': 'cab8b360',
          'sequences': list([
          ]),
          'source_name': '8816-v2',
          'source_type': 'isolate',
        }),
      ]),
      'last_indexed_version': 0,
      'lower_name': 'prunus virus f',
      'name': 'Prunus virus F',
      'reference': dict({
        'id': 'hxn167',
      }),
      'remote_id': None,
      'schema': list([
      ]),
      'verified': False,
      'version': 0,
    }),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'remove',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 'removed',
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_remove[True-PVF-True]
  dict({
    '_id': '6116cba1.removed',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Removed Prunus virus F (PVF)',
    'diff': dict({
      '_id': '6116cba1',
      'abbreviation': 'PVF',
      'isolates': list([
        dict({
          'default': True,
          'id': 'cab8b360',
          'sequences': list([
          ]),
          'source_name': '8816-v2',
          'source_type': 'isolate',
        }),
      ]),
      'last_indexed_version': 0,
      'lower_name': 'prunus virus f',
      'name': 'Prunus virus F',
      'reference': dict({
        'id': 'hxn167',
      }),
      'remote_id': None,
      'schema': list([
      ]),
      'verified': False,
      'version': 0,
    }),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'remove',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 'removed',
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_remove_sequence[True-None]
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_remove_sequence[True-None].1
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Removed sequence abcd1234 from Isolate 8816-v2',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'remove',
        list([
          'isolates',
          0,
          'sequences',
        ]),
        list([
          list([
            0,
            dict({
              '_id': 'abcd1234',
              'accession': 'KX269872',
              'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
              'host': 'sweet cherry',
              'isolate_id': 'cab8b360',
              'otu_id': '6116cba1',
              'reference': dict({
                'id': 'ref',
              }),
              'remote': None,
              'segment': None,
              'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'remove_sequence',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
